Use deployed backend URL

--- a/Server/.env
+++ b/Server/.env
@@ -1,6 +1,5 @@
 NODE_ENV=production
 RAZORPAY_KEY_ID="rzp_live_RKkODogesFbVEm"
 RAZORPAY_KEY_SECRET="kS1rpS6eplu59H6pZ4095qRQ"
-REACT_APP_BACKEND_URL=https://your-live-backend.com
-
+REACT_APP_BACKEND_URL=https://event-manager-2-1.onrender.com
 PORT=5000 
