Updated homepage layout and fixed CSS bugs

--- a/Server/.env
+++ b/Server/.env
@@ -1,5 +1,5 @@
 NODE_ENV=production
-RAZORPAY_KEY_ID="rzp_live_RKkODogesFbVEm"
-RAZORPAY_KEY_SECRET="kS1rpS6eplu59H6pZ4095qRQ"
-REACT_APP_BACKEND_URL=https://event-manager-2-1.onrender.com
-PORT=5000 
+RAZORPAY_KEY_ID=rzp_test_RL6e1Ke8DvBIBO
+RAZORPAY_KEY_SECRET=E1y0f0vhD42Zrxp1sFiK2GxV
+REACT_APP_BACKEND_URL=http://localhost:5000
+PORT=5000  
