--- a/Server/.env
+++ b/Server/.env
@@ -1,5 +1,5 @@
 NODE_ENV=production
 RAZORPAY_KEY_ID=rzp_test_RL6e1Ke8DvBIBO
 RAZORPAY_KEY_SECRET=E1y0f0vhD42Zrxp1sFiK2GxV
-REACT_APP_BACKEND_URL=http://localhost:5000
+REACT_APP_BACKEND_URL=https://event-manager-2-vukn.onrender.com
 PORT=5000  
