--- a/Server/.env
+++ b/Server/.env
@@ -3,3 +3,5 @@ RAZORPAY_KEY_ID=rzp_test_RL6e1Ke8DvBIBO
 RAZORPAY_KEY_SECRET=E1y0f0vhD42Zrxp1sFiK2GxV
 REACT_APP_BACKEND_URL=https://event-manager-2-vukn.onrender.com
 PORT=5000  
+MONGODB_URI=mongodb://127.0.0.1:27017/eventopia 
+JWT_SECRET=supersecretkey123 
